# a3m

./: .bandit  .codecov.yml  .coveragerc  .dockerignore  .gitattributes  .gitignore  .gitmodules  .pre-commit-config.yaml  .pylintrc  .pyup.yml  .readthedocs.yaml  .travis.yml  CHANGELOG.rst  CONTRIBUTING.md  COPYRIGHT  Dockerfile  MANIFEST.in  Makefile  README.md  README.rst  buf.gen.yaml  buf.yaml  compose.yml  docker-compose.acceptance-tests.yml  docker-compose.instrumentation.yml  docker-compose.yml  manage.py  pyproject.toml  pytest.ini  requirements-dev.in  requirements-dev.txt  requirements.in  requirements.txt  setup.cfg  setup.py  test.sh  tox.ini
.github/ISSUE_TEMPLATE/: bug_report.md
.github/codeql/: codeql-config.yml
.github/workflows/: buf-pull-request.yml  buf-push.yml  codeql.yml  e2e.yml  lint.yml  main.yml  pre-commit.yml  publish.yml  release.yml  tests.yml
a3m/: __init__.py  __main__.py  appconfig.py  archivematicaFunctions.py  bag.py  bindpid.py  common_metrics.py  countryCodes.py  custom_handlers.py  databaseFunctions.py  dicts.py  executeOrRunSubProcess.py  fileOperations.py  helpers.py  namespaces.py  processing.py  storageService.py  version.py
a3m/assets/: workflow-schema-v1.json  workflow.json
a3m/cli/: __init__.py  common.py
a3m/cli/client/: __init__.py  __main__.py  wrapper.py
a3m/cli/server/: __init__.py  __main__.py
a3m/client/: __init__.py  fork_runner.py  job.py  mcp.py  metrics.py
a3m/client/assets/: modules.ini
a3m/client/clientScripts/: a3m_download_transfer.py  a3m_store_aip.py  archivematicaCreateMETSMetadataCSV.py  archivematicaCreateMETSReingest.py  archivematicaCreateMETSRights.py  archivematicaCreateMETSRightsDspaceMDRef.py  archivematicaCreateMETSTrim.py  archivematica_clamscan.py  assign_file_uuids.py  assign_uuids_to_directories.py  bag_with_empty_directories.py  bind_pid.py  bind_pids.py  change_names.py  change_object_names.py  characterize_file.py  check_for_access_directory.py  check_for_service_directory.py  check_for_submission_documentation.py  check_transfer_directory_for_objects.py  cmd_chmod.py  cmd_cp.py  cmd_mkdir.py  cmd_mv.py  cmd_test.py  cmd_tree.py  compress_aip.py  convert_dataverse_structure.py  copy_recursive.py  copy_submission_docs.py  copy_thumbnails_to_dip_directory.py  copy_transfer_submission_documentation.py  copy_transfers_metadata_and_logs.py  create_aic_mets.py  create_event.py  create_mets_dataverse_v2.py  create_mets_v2.py  create_sip_from_transfer_objects.py  create_sips_from_trim_transfer_containers.py  create_transfer_metadata.py  (+74 more)
a3m/client/settings/: common.py
a3m/fpr/: models.py  registry.py
a3m/fpr/migrations/: 0001_initial.py  0002_initial_data.py  initial-data.json
a3m/main/: __init__.py  apps.py  models.py  signals.py
a3m/main/management/: steps.py
a3m/main/migrations/: 0001_initial.py  0002_initial_data.py  0006_levelofdescription.py  0023_blob_fields.py  0032_dashboardsetting_scope.py  0033_store_transfer_file_modification_dates.py  0034_add_readme_to_aips.py  0038_fix_workflow_store_dip.py  0040_directory_model.py  0046_optional_normative_structmap.py  0050_remove_magic_links.py  0054_index_aip_silent_error_branch.py  0058_fix_unit_variable_pull_link.py  0059_siparrange_longblob.py  0061_create_dataverse_transfer_type.py  0062_atom_upload_exit_code.py  0076_auto_20200411_2235.py  initial-data.json
a3m/server/: __init__.py  db.py  enduro.py  mcp.py  metrics.py  packages.py  processing.py  processing_config.py  queues.py  rpc_server.py  runner.py  shared_dirs.py  transfer_service.py  translation.py  utils.py  watch_dirs.py  workflow.py
a3m/server/jobs/: __init__.py  base.py  chain.py  client.py  decisions.py  local.py
a3m/server/rpc/: a3m.proto  a3m_pb2.py  a3m_pb2_grpc.py  client.py
a3m/server/settings/: common.py
a3m/server/tasks/: __init__.py  task.py
a3m/settings/: common.py  test.py
changelog.d/: 20231027_092733_scriv.rst  20231207_171522_jesus_platformdirs.rst  20231207_173057_jesus_platformdirs.rst  20231212_154905_jesus_processing_config_defaults.rst
docs/: Makefile  about.rst  changelog.rst  conf.py  contributing.rst  dependencies.rst  development.rst  docker.rst  index.rst  installation.rst  overview.rst  settings.rst  usage.rst
docs/_static/: custom.css
docs/old-docs/: dev-notes.md
examples/: Dockerfile  webapp.py
hack/fpr/: README.md
proto/: buf.gen.yaml  buf.yaml
src/MCPClient/lib/: archivematicaClientModules
src/a3m/: helpers.py  storageService.py
src/a3m/main/: signals.py
src/archivematicaCommon/lib/: appconfig.py  archivematicaFunctions.py
tests/: conftest.py  test_registry.py
tests/client/: __init__.py  test_antivirus.py  test_antivirus_clamdscan.py  test_antivirus_clamscan.py  test_archivematicaClient.py  test_client.py  test_create_aip_mets.py  test_create_dataverse_mets.py  test_create_mets_v2.py  test_create_transfer_mets.py  test_dip_generation_helper.py  test_filename_change.py  test_has_packages.py  test_identify_file_format.py  test_job.py  test_json_conversion.py  test_load_premis_events_from_xml.py  test_move_or_merge.py  test_move_to_backlog.py  test_parse_dataverse.py  test_parse_mets_to_db.py  test_pid_components.py  test_reingest_mets.py  test_rights_from_csv.py  test_sanitize.py  test_store_file_modification.py  test_validate_file.py  test_verify_checksum.py
tests/client/fixtures/: agents.json  dataverse_sip.json  dublincore.json  events-reingest.json  events-transfer.json  files-transfer-unicode.json  fpr-reingest.json  mets_file_dc.xml  mets_file_dc_updated.xml  mets_no_metadata.xml  mets_superseded_techmd.xml  reingest-checksum.json  reingest-file-id.json  reingest-preservation.json  rights-unicode-filepath.csv  rights.json  sip.json  (+1 more)
tests/common/: test_bindpid.py  test_database_functions.py  test_dicts.py  test_env_configparser.py  test_execute_functions.py  test_file_operations.py
tests/server/: test_backend.py  test_gearman.py  test_integration.py  test_mcp.py  test_package.py  test_pool.py  test_processing_config.py  test_queues.py  test_translation.py  test_workflow.py
(+63 files in other folders)
