[build-system]
requires = ["setuptools>=68", "wheel>=0.41"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
env = [
  "DJANGO_SETTINGS_MODULE=a3m.settings.test",
]
filterwarnings = [
  "error",
  "ignore:^Deprecated call to `pkg_resources.declare_namespace:DeprecationWarning",
  "ignore:^pkg_resources is deprecated:DeprecationWarning",
]
norecursedirs = [
  "_build",
  "tmp*",
  ".tox",
  "hack",
  ".venv",
]
python_files = [
  "tests.py",
  "test_*.py",
  "*_tests.py",
]
testpaths = [
  "tests",
]

[tool.ruff]
target-version = "py39"
select = ["E", "F", "W"]
ignore = [
  "E402",
  "E501",
  "E722",
  "W191",
]
exclude = [
  "a3m/settings/**/*",
  "a3m/api/**/*",
]

[tool.pyright]
include = [
  "a3m",
  "tests",
]
exclude = [
  "a3m/api/*/**",
  "a3m/main/migrations/*/**",
]
typeCheckingMode = "basic"

[tool.mypy]
ignore_missing_imports = true
namespace_packages = true
files = [
  "a3m",
]

[[tool.mypy.overrides]]
module = "a3m.main.migrations.*"
ignore_errors = true

[[tool.mypy.overrides]]
module = "a3m.main.models"
ignore_errors = true

[[tool.mypy.overrides]]
module = "a3m.server.rpc.*"
ignore_errors = true

[tool.bandit]
exclude_dirs = [
  "tests",
]
skips = [
  "B410", # import_lxml
]

[tool.vulture]
paths = [
  "a3m",
]
exclude = [
  "a3m/settings",
  "a3m/main/models.py",
  "a3m/main/migrations",
  "a3m/server/rpc/proto",
  "a3m/api",
]

[tool.tox]
legacy_tox_ini = """
    [tox]
    skipsdist = True
    min_version = 4.0
    env_list =
        py3{11,12},
        coverage,
        tox
    labels=
        py = py3{11,12}

    [testenv]
    deps =
        -r {toxinidir}/requirements-dev.txt
    passenv =
        COVERAGE_*
    commands =
        python -V
        coverage run -p -m pytest -Wd {posargs}

    [testenv:coverage]
    depends = pypy311,py312
    basepython = python3.12
    commands =
        coverage combine
        coverage report -m --skip-covered
        coverage html
        coverage json
        coverage xml
    parallel_show_output = true

    [testenv:pre-commit]
    skip_install = true
    deps = pre-commit
    commands = pre-commit run --all-files --show-diff-on-failure
"""
