[build-system]
requires = ["setuptools>=68", "wheel>=0.41"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["a3m*"]
namespaces = false

[project]
name = "a3m"
dynamic = ["version"]
description = "Lightweight Archivematica"
requires-python = ">=3.11"
readme = "README.rst"
license = {file = "LICENSE"}
dependencies = [
  # Used by client modules
  "ammcpc~=0.1",
  "metsrw~=0.4",
  "bagit~=1.8",
  "lxml~=4.9",
  "unidecode~=1.3",
  "pygfried~=0.6",
  # Django ORM
  "Django~=4.2",
  "django-stubs-ext~=4.2",
  # Infra
  "prometheus_client~=0.17",
  "requests~=2.31",
  "platformdirs~=4.1",
  "click~=8.1",
  "rich~=13.6",
  "tenacity~=8.2",
  "boto3~=1.28",
  # MCPServer"
  "jsonschema~=4.19",
  "grpcio~=1.59",
  "grpcio-reflection~=1.59",
  "grpcio-status~=1.59",
  "googleapis-common-protos~=1.61",
]
keywords = [
  "archivematica",
  "preservation",
]
classifiers = [
  "Development Status :: 1 - Planning",
  "Environment :: Console",
  "Intended Audience :: Information Technology",
  "License :: OSI Approved :: GNU Affero General Public License v3",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: System :: Archiving",
  "Topic :: System :: Archiving :: Backup",
  "Topic :: System :: Archiving :: Compression",
  "Topic :: System :: Archiving :: Mirroring",
  "Topic :: System :: Archiving :: Packaging",
]
authors = [
  {name = "Artefactual Systems Inc.", email = "info@artefactual.com"}
]
maintainers = [
  {name = "Artefactual Systems Inc.", email = "info@artefactual.com"}
]

[project.urls]
homepage = "https://github.com/artefactual-labs/a3m"
documentation = "https://a3m.readthedocs.io/"
repository = "https://github.com/artefactual-labs/a3m"
issues = "https://github.com/artefactual-labs/a3m/issues"

[project.scripts]
a3m = "a3m.cli.client.__main__:main"
a3md = "a3m.cli.server.__main__:main"

[project.optional-dependencies]
dev = [
  "pytest",
  "pytest-cov",
  "pytest-django",
  "pytest-env",
  "pytest-mock",
  "coverage",
  "pip-tools",
  "grpcio-tools",
  "mypy",
  "tox",
  "vulture",
  "bandit",
  "pre-commit",
  "sphinx",
  "sphinxcontrib-mermaid",
  "doc8",
  "ruff",
  "scriv",
  "twine",
  "build",
  "wheel",
  "django-types",
  "types-lxml",
  "types-requests",
  "types-protobuf",
]

[tool.setuptools.dynamic]
version = {attr = "a3m.__version__"}
readme = {file = ["README.rst"]}

[tool.pytest.ini_options]
env = [
  "DJANGO_SETTINGS_MODULE=a3m.settings.test",
]
filterwarnings = [
  "error",
  "ignore:^Deprecated call to `pkg_resources.declare_namespace:DeprecationWarning",
  "ignore:^pkg_resources is deprecated:DeprecationWarning:bagit.*",
  "ignore:.*uses PyType_Spec with a metaclass:DeprecationWarning",
  "ignore:.*datetime.datetime.utcfromtimestamp:DeprecationWarning:google.*",
  "ignore:.*datetime.datetime.utcnow:DeprecationWarning:metsrw.*",
]
norecursedirs = [
  "_build",
  "tmp*",
  ".tox",
  "hack",
  ".venv",
]
python_files = [
  "tests.py",
  "test_*.py",
  "*_tests.py",
]
testpaths = [
  "tests",
]

[tool.ruff]
target-version = "py39"
select = ["E", "F", "W"]
ignore = [
  "E402",
  "E501",
  "E722",
  "W191",
]
exclude = [
  "a3m/settings/**/*",
  "a3m/api/**/*",
]

[tool.pyright]
include = [
  "a3m",
  "tests",
]
exclude = [
  "a3m/api/*/**",
  "a3m/main/migrations/*/**",
]
typeCheckingMode = "basic"

[tool.mypy]
ignore_missing_imports = true
namespace_packages = true
files = [
  "a3m",
]

[[tool.mypy.overrides]]
module = "a3m.main.migrations.*"
ignore_errors = true

[[tool.mypy.overrides]]
module = "a3m.main.models"
ignore_errors = true

[[tool.mypy.overrides]]
module = "a3m.server.rpc.*"
ignore_errors = true

[tool.bandit]
exclude_dirs = [
  "tests",
]
skips = [
  "B410", # import_lxml
]

[tool.vulture]
paths = [
  "a3m",
]
exclude = [
  "a3m/settings",
  "a3m/main/models.py",
  "a3m/main/migrations",
  "a3m/server/rpc/proto",
  "a3m/api",
]

[tool.coverage.run]
source = [
  "a3m",
]
branch = true
omit = [
  "a3m/api/*",
  "a3m/server/rpc/*",
  "a3m/settings/*",
  "tests/*",
]

[tool.tox]
legacy_tox_ini = """
    [tox]
    min_version = 4.0
    env_list =
        py3{11,12},
        coverage,
        tox,
        pre-commit
    labels =
        py = py3{11,12}

    [testenv]
    skipsdist = true
    deps =
        -r {toxinidir}/requirements-dev.txt
    passenv =
        COVERAGE_*
    commands =
        python -V
        coverage run -p -m pytest {posargs:-qq}

    [testenv:coverage]
    skip_install = true
    depends = pypy311,py312
    basepython = python3.12
    commands =
        coverage combine
        coverage report -m --skip-covered
        coverage html
        coverage xml
    parallel_show_output = true

    [testenv:pre-commit]
    skip_install = true
    commands = pre-commit run --all-files --show-diff-on-failure

    [testenv:publish]
    skip_install = true
    allowlist_externals =
      twine
      rm
    commands =
      rm -rf {toxinidir}/build {toxinidir}/dist
      python -m build
      twine check --strict {toxinidir}/dist/*
      twine upload dist/* -r a3m
"""

[tool.doc8]
ignore-path = [
  "docs/_build",
]
max-line-length = 80

[tool.scriv]
version = "literal: a3m/__init__.py: __version__"
