[metadata]
name = a3m
version = attr: a3m.__version__
description = Lightweight Archivematica
keywords = archivematica, preservation
url = https://github.com/artefactual-labs/a3m
project_urls =
    Source=https://github.com/artefactual-labs/a3m
    Tracker=https://github.com/artefactual-labs/a3m/issues
maintainer = Artefactual Systems Inc.
maintainer_email = info@artefactual.com
long_description = file: README.rst
long_description_content_type = text/x-rst
license = AGPL-3.0-only
license_files = LICENSE
classifiers =
    Development Status :: 1 - Planning
    Environment :: Console
    Intended Audience :: Information Technology
    License :: OSI Approved :: GNU Affero General Public License v3
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: System :: Archiving
    Topic :: System :: Archiving :: Backup
    Topic :: System :: Archiving :: Compression
    Topic :: System :: Archiving :: Mirroring
    Topic :: System :: Archiving :: Packaging


[options]
zip_safe = False
include_package_data = True
packages = a3m
python_requires = ~=3.8
install_requires =
    ammcpc~=0.1
    metsrw~=0.3
    bagit~=1.7
    opf-fido~=1.4
    clamd~=1.0
    lxml~=4.6
    unidecode~=1.1
    Django~=2.2
    prometheus_client~=0.8
    requests~=2.24
    appdirs~=1.4
    click~=7.1
    rich~=9.0
    tenacity~=6.2
    boto3~=1.14
    jsonschema~=4.2
    grpcio~=1.31
    grpcio-reflection~=1.31
    grpcio-status~=1.31
    googleapis-common-protos~=1.51


[options.entry_points]
console_scripts =
    a3m = a3m.cli.client.__main__:main
    a3md = a3m.cli.server.__main__:main


[tool:pytest]
DJANGO_SETTINGS_MODULE = a3m.settings.test
norecursedirs = _build tmp* .tox hack .venv
python_files = tests.py test_*.py *_tests.py
addopts = -Werror


[tool:flake8]
exclude = .tox, .git, __pycache__, .cache, build, dist, *.pyc, *.egg-info, .eggs
application-import-names = flake8
select = C, E, F, W, B, B950
ignore = E203, E402, E501, E722, W503, W605
per-file-ignores =
    *.pyi: F401


[coverage:run]
source = a3m/
branch = True
omit =
    a3m/externals/
    a3m/server/rpc/
    **/migrations/*
    **/settings/*
    tests/
    manage.py

[mypy]
ignore_missing_imports = True

[mypy-a3m.server.rpc.*]
ignore_errors = True

[mypy-a3m.fpr.migrations.0001_initial]
ignore_errors = False
