[metadata]
name = a3m
version = attr: a3m.__version__
description = Lightweight Archivematica
keywords = archivematica, preservation
url = https://github.com/artefactual-labs/a3m
project_urls =
    Source=https://github.com/artefactual-labs/a3m
    Tracker=https://github.com/artefactual-labs/a3m/issues
maintainer = Artefactual Systems Inc.
maintainer_email = info@artefactual.com
long_description = file: README.rst
long_description_content_type = text/x-rst
license = AGPL-3.0-only
license_files = LICENSE
classifiers =
    Development Status :: 1 - Planning
    Environment :: Console
    Intended Audience :: Information Technology
    License :: OSI Approved :: GNU Affero General Public License v3
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.9
    Topic :: System :: Archiving
    Topic :: System :: Archiving :: Backup
    Topic :: System :: Archiving :: Compression
    Topic :: System :: Archiving :: Mirroring
    Topic :: System :: Archiving :: Packaging


[options]
zip_safe = False
include_package_data = True
packages = a3m
python_requires = ~=3.9
install_requires =
    # Used by client modules
    ammcpc~=0.1
    metsrw~=0.3
    bagit~=1.7
    clamd~=1.0
    lxml~=4.7
    unidecode~=1.3
    pygfried~=0.5
    # Django ORM
    Django~=3.2
    # Infra
    prometheus_client~=0.12
    requests~=2.26
    appdirs~=1.4
    click~=8.0
    rich~=10.16
    tenacity~=8.0
    boto3~=1.20
    # MCPServer
    jsonschema~=4.3
    grpcio~=1.46.3
    grpcio-reflection~=1.46.3
    grpcio-status~=1.46.3
    googleapis-common-protos~=1.56.1


[options.extras_require]
dev =
    pytest
    pytest-cov
    pytest-django
    pytest-mock
    vcrpy
    coverage
    pip-tools
    grpcio-tools
    mypy
    tox
    pylint
    vulture
    black
    flake8
    bandit
    pre-commit
    sphinx
    sphinxcontrib-mermaid
    releases


[options.entry_points]
console_scripts =
    a3m = a3m.cli.client.__main__:main
    a3md = a3m.cli.server.__main__:main


[tool:pytest]
DJANGO_SETTINGS_MODULE = a3m.settings.test
norecursedirs = _build tmp* .tox hack .venv
python_files = tests.py test_*.py *_tests.py
addopts = -Werror
testpaths = tests


[flake8]
exclude = .venv, .tox, .git, __pycache__, .cache, build, dist, *.pyc, *.egg-info, .eggs, a3m/api/**/*.py
application-import-names = flake8
select = C, E, F, W, B, B950
ignore = E203, E402, E501, E722, W503, W605


[coverage:run]
source = a3m/
branch = True
omit =
    a3m/api/
    a3m/externals/
    a3m/server/rpc/
    **/migrations/*
    **/settings/*
    tests/
    manage.py


[mypy]
ignore_missing_imports = True
namespace_packages = True

[mypy-a3m.server.rpc.*]
ignore_errors = True

[mypy-a3m.fpr.migrations.0001_initial]
ignore_errors = False
