[metadata]
name = a3m
version = attr: a3m.__version__
description = Lightweight Archivematica
keywords = archivematica, preservation
url = https://github.com/artefactual-labs/a3m
project_urls =
    Source=https://github.com/artefactual-labs/a3m
    Tracker=https://github.com/artefactual-labs/a3m/issues
maintainer = Artefactual Systems Inc.
maintainer_email = info@artefactual.com
long_description = file: README.rst
long_description_content_type = text/x-rst
license = AGPL-3.0-only
license_files = LICENSE
classifiers =
    Development Status :: 1 - Planning
    Environment :: Console
    Intended Audience :: Information Technology
    License :: OSI Approved :: GNU Affero General Public License v3
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.11
    Topic :: System :: Archiving
    Topic :: System :: Archiving :: Backup
    Topic :: System :: Archiving :: Compression
    Topic :: System :: Archiving :: Mirroring
    Topic :: System :: Archiving :: Packaging


[options]
zip_safe = False
include_package_data = True
packages = a3m
python_requires = ~=3.11
install_requires =
    # Used by client modules
    ammcpc~=0.1
    metsrw~=0.4
    bagit~=1.8
    lxml~=4.9
    unidecode~=1.3
    pygfried~=0.6
    # Django ORM
    Django~=4.2
    django-stubs-ext~=4.2
    # Infra
    prometheus_client~=0.17
    requests~=2.31
    appdirs~=1.4
    click~=8.1
    rich~=13.6
    tenacity~=8.2
    boto3~=1.28
    # MCPServer
    jsonschema~=4.19
    grpcio~=1.59
    grpcio-reflection~=1.59
    grpcio-status~=1.59
    googleapis-common-protos~=1.61


[options.extras_require]
dev =
    pytest
    pytest-cov
    pytest-django
    pytest-env
    pytest-mock
    coverage
    pip-tools
    grpcio-tools
    mypy
    pylint
    vulture
    black
    flake8
    bandit
    pre-commit
    sphinx
    sphinxcontrib-mermaid
    django-types
    types-lxml
    types-requests
    types-protobuf


[options.entry_points]
console_scripts =
    a3m = a3m.cli.client.__main__:main
    a3md = a3m.cli.server.__main__:main


[flake8]
exclude = .venv, .git, __pycache__, .cache, build, dist, *.pyc, *.egg-info, .eggs, a3m/api/**/*.py
application-import-names = flake8
select = C, E, F, W, B, B950
ignore = E203, E402, E501, E722, W503, W605


[coverage:run]
source = a3m/
branch = True
omit =
    a3m/api/
    a3m/externals/
    a3m/server/rpc/
    **/migrations/*
    **/settings/*
    tests/
    manage.py
